--- a/app.yaml
+++ b/app.yaml
@@ -13,6 +13,9 @@ handlers:
 - url: /UpdateDatabase
   script: main.app
   login: required
+- url: /login
+  script: main.app
+  login: required
 - url: /.*
   script: main.app
 
